--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
           console.log("Configuring rs0...");
           rs.initiate({
             _id: "rs0",
-            members: [{ _id: 0, host: "mongo:27017" }]
+            members: [{ _id: 0, host: "localhost:27017" }]
           });
         }
       '
