--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ dependencies = [
     "eventsourcing-kurrentdb>=1.2.2",
     "fastapi>=0.128.0",
     "lagom>=2.7.7",
-    "motor==3.3.2",
+    "motor>=3.5.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
-    "pymongo==4.6.0",
+    "pymongo>=4.7.0",
     "python-dotenv>=1.2.1",
     "returns>=0.26.0",
     "structlog>=25.5.0",
