--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,14 +1,8 @@
-"""Pytest configuration."""
-
-import pytest
-
-# Register async test marker
-def pytest_configure(config):
-    """Register custom markers."""
-    config.addinivalue_line(
-        "markers", "asyncio: mark test as async (deselect with '-m \"not asyncio\"')"
-    )
-
-
-# Auto-use asyncio for tests
-pytest_plugins = ("pytest_asyncio",)
+[pytest]
+addopts = -v
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+markers =
+    asyncio: mark test as async (deselect with '-m "not asyncio"')
