--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -9,12 +9,14 @@ dependencies = [
     "eventsourcing>=9.5.2",
     "eventsourcing-kurrentdb>=1.2.2",
     "fastapi>=0.128.0",
+    "fsspec>=2026.1.0",
     "lagom>=2.7.7",
     "motor>=3.5.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pymongo>=4.7.0",
     "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.22",
     "returns>=0.26.0",
     "structlog>=25.5.0",
     "uvicorn>=0.40.0",
