--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-multipart>=0.0.22",
     "returns>=0.26.0",
     "structlog>=25.5.0",
+    "temporalio>=1.3.0",
     "uvicorn>=0.40.0",
 ]
 
