--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,17 +32,17 @@ jobs:
       - name: Install dependencies
         run: |
           pip install uv
-          uv sync --dev
+          cd services && uv sync --dev
       
       - name: Run tests
         run: |
-          make test
+          cd services && make test
       
       - name: Upload coverage
         uses: codecov/codecov-action@v3
         if: always()
         with:
-          files: ./coverage.xml
+          files: ./services/coverage.xml
           fail_ci_if_error: false
   
   lint:
@@ -59,8 +59,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install uv
-          uv sync --dev
+          cd services && uv sync --dev
       
       - name: Run lint
         run: |
-          make lint
+          cd services && make lint
