pypdf and extract text

--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -11,10 +11,15 @@ dependencies = [
     "fastapi>=0.128.0",
     "fsspec>=2026.1.0",
     "lagom>=2.7.7",
+    "langchain>=1.2.9",
+    "langchain-community>=0.4.1",
+    "langchain-core>=1.2.9",
     "motor>=3.5.0",
+    "pdf2image>=1.17.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pymongo>=4.7.0",
+    "pypdf>=6.6.2",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
     "returns>=0.26.0",
