--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pymongo>=4.7.0",
+    "pymupdf>=1.26.7",
     "pypdf>=6.6.2",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
