--- a/services/.env.example
+++ b/services/.env.example
@@ -1,5 +1,5 @@
 # Application
-APP_NAME=TodoApp2
+APP_NAME=DocuStore
 APP_ENV=development
 LOG_LEVEL=INFO
 
@@ -7,16 +7,31 @@ LOG_LEVEL=INFO
 EVENTSTOREDB_URI=esdb://localhost:2113?tls=false
 
 # Kafka
-KAFKA_BOOTSTRAP_SERVERS=localhost:9092
-KAFKA_TOPIC=todo_events
+ENABLE_EXTERNAL_EVENT_STREAMING=true
+KAFKA_BOOTSTRAP_SERVERS=localhost:19092
+KAFKA_TOPIC=docu_store_events
 
 # API
 API_HOST=0.0.0.0
 API_PORT=8000
 
 # MongoDB Read Models
-MONGO_URI=mongodb://localhost:27017
-MONGO_DB=todoapp2
-MONGO_TASKS_COLLECTION=task_read_models
-MONGO_PROJECTS_COLLECTION=project_read_models
+MONGO_URI=mongodb://localhost:27017/?replicaSet=rs0
+MONGO_DB=docu_store
+MONGO_PAGES_COLLECTION=page_read_models
+MONGO_ARTIFACTS_COLLECTION=artifact_read_models
 MONGO_TRACKING_COLLECTION=read_model_tracking
+
+# Temporal
+TEMPORAL_ADDRESS=localhost:7233
+
+# Qdrant Vector Store
+QDRANT_URL=http://localhost:6333
+# QDRANT_API_KEY=your-api-key-for-cloud  # Uncomment for cloud deployment
+QDRANT_COLLECTION_NAME=page_embeddings
+
+# Embeddings
+EMBEDDING_MODEL_PROVIDER=sentence-transformers  # Options: sentence-transformers, openai
+EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
+EMBEDDING_DEVICE=cpu  # Options: cpu, cuda, mps (for Mac M1/M2)
+# OPENAI_API_KEY=sk-...  # Only needed if EMBEDDING_MODEL_PROVIDER=openai
