--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -23,9 +23,12 @@ dependencies = [
     "pypdf>=6.6.2",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
+    "qdrant-client>=1.12.0",
     "returns>=0.26.0",
+    "sentence-transformers>=3.3.0",
     "structlog>=25.5.0",
     "temporalio>=1.3.0",
+    "torch>=2.5.0",
     "uvicorn>=0.40.0",
 ]
 
