--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "qdrant-client>=1.12.0",
     "returns>=0.26.0",
     "sentence-transformers>=3.3.0",
+    "structflo-cser>=0.2.0",
     "structlog>=25.5.0",
     "temporalio>=1.3.0",
     "torch>=2.5.0",
