--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
     "qdrant-client>=1.12.0",
+    "rdkit>=2025.9.5",
     "returns>=0.26.0",
     "sentence-transformers>=3.3.0",
     "structflo-cser>=0.2.0",
