--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "structlog>=25.5.0",
     "temporalio>=1.3.0",
     "torch>=2.5.0",
+    "transformers>=5.1.0",
     "uvicorn>=0.40.0",
 ]
 
