--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "langchain>=1.2.9",
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.9",
+    "langchain-ollama>=1.0.1",
     "langchain-text-splitters>=0.3.0",
+    "langfuse>=3.14.5",
     "motor>=3.5.0",
     "pdf2image>=1.17.0",
     "pydantic>=2.12.5",
@@ -24,6 +26,7 @@ dependencies = [
     "pypdf>=6.6.2",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
+    "pyyaml>=6.0.3",
     "qdrant-client>=1.12.0",
     "rdkit>=2025.9.5",
     "returns>=0.26.0",
