--- a/services/Makefile
+++ b/services/Makefile
@@ -1,6 +1,6 @@
 COMPOSE := docker-compose -f docker-compose.yml -f docker-compose-langfuse.yml
 
-.PHONY: help install dev-install run run-read-models run-all stop-all test lint format clean docker-up docker-down docker-clean langfuse-up langfuse-down langfuse-clean
+.PHONY: help install dev-install run run-read-models run-all stop-all test lint format clean docker-up docker-down docker-clean langfuse-seed
 
 help: ## Show this help message
 	@echo "Available commands:"
@@ -54,7 +54,7 @@ clean: ## Clean up generated files
 	rm -rf .pytest_cache .coverage htmlcov .mypy_cache .ruff_cache
 	rm -rf dist build *.egg-info
 
-docker-up: ## Start all infrastructure services (core + Langfuse v3)
+docker-up: ## Start all infrastructure services (core + Langfuse v3) and seed prompts
 	$(COMPOSE) up -d
 	@echo "Waiting for services to be healthy..."
 	@sleep 5
@@ -67,6 +67,10 @@ docker-up: ## Start all infrastructure services (core + Langfuse v3)
 	@echo "  - Temporal UI: http://localhost:8233"
 	@echo "  - Qdrant UI: http://localhost:6333/dashboard"
 	@echo "  - Langfuse UI: http://localhost:3000  (dev@docustore.local / devpassword)"
+	@$(MAKE) langfuse-seed
+
+langfuse-seed: ## Seed Langfuse with default prompts from infrastructure/llm/default_prompts/
+	uv run python scripts/seed_langfuse_prompts.py
 
 docker-down: ## Stop all infrastructure services
 	$(COMPOSE) down
